--- a/index.css
+++ b/index.css
@@ -87,6 +87,12 @@ h1, h2, h3, h4, h5, h6 {
       height: 76px;
       border-radius: 20px;
     }
+    .btn.paper {
+      background-position: -40px -104px;
+      width: 110px;
+      height: 100px;
+      border-radius: 20px;
+    }
 
 .is-hidden {
   display: none;
