--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ h1, h2, h3, h4, h5, h6 {
   should keep the default arrow cursor for buttons */
   cursor: pointer;
 }
+.player-pane button:disabled {
+  background-color: #999999;
+  color: #333333;
+}
 
     /**
      * Button component
